--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ body {
     <div class="card">
       <h2>About Me</h2>
       <div class="fakeimg" style="height:100px;">Image</div>
-      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+      <p>My name is Ly Vu Duc, and I am from Binh Phuoc, Vietnam. Currently, I am a Ph.D student at the Univerisity of Trento.</p>
     </div>
     <div class="card">
       <h3>Popular Post</h3>
