--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body {
 
 /* Create two unequal columns that floats next to each other */
 /* Left column */
-.leftcolumn {   
+.leftcolumn {
   float: left;
   width: 75%;
 }
@@ -67,7 +67,7 @@ body {
 
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 800px) {
-  .leftcolumn, .rightcolumn {   
+  .leftcolumn, .rightcolumn {
     width: 100%;
     padding: 0;
   }
@@ -100,7 +100,8 @@ body {
   <div class="rightcolumn">
     <div class="card">
       <h2>About Me</h2>
-      <div class="fakeimg" style="height:100px;">Image</div>
+      <!-- <div class="fakeimg" style="height:100px;">Image</div> -->
+       <img src="figures/avatar.jpg" alt="Mountains" width="300" height="300">
       <p>My name is Ly Vu Duc, and I am from Binh Phuoc, Vietnam. Currently, I am a Ph.D student at the Univerisity of Trento.</p>
     </div>
     <div class="card">
