This commit adds additional publication and changes font sizes

--- a/publications.html
+++ b/publications.html
@@ -1,15 +1,48 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+<style>
+ol li{
+ font-size:18px;
+}
+</style>
+</head>
+
 <body>
 
 <h2>Publications</h2>
 
-<ol type="1">
-    <li><u>Duc-Ly Vu</u>. What Developers Want for FOSS Dependency Management? Open Problems from
-        a Qualitative Study. REFSQ 2020 Doctoral Symposium. </li>
-    <li><u>Duc-Ly Vu</u>, Ivan Pashchenko, Fabio Massacci, Henrik Plate, Antonino Sabetta.
-        Typosquatting and Combosquatting Attacks on the Python Ecosystem. To Appear in Proceedings of the IEEE European Symposium on Security and Privacy Workshops (EuroS&PW), 2020. </li>
-  <li>Milk</li>
+<ol type="1", class="c">
+    <li><u>Duc-Ly Vu</u>. <b>What Developers Want for FOSS Dependency Management? Open Problems from
+            a Qualitative Study</b>. REFSQ 2020 Doctoral Symposium. </li>
+    <li><u>Duc-Ly Vu</u>, Ivan Pashchenko, Fabio Massacci, Henrik Plate,
+        Antonino Sabetta. <b>Typosquatting and Combosquatting Attacks on the
+            Python Ecosystem</b>. In Proceedings of the IEEE European
+    Symposium on Security and Privacy Workshops (EuroS&PW), 2020. <a
+        href="https://drive.google.com/file/d/1P1-zhNXrnzQrZTUZyDnG4qkHlmBZaYQb/view?usp=sharing">Paper</a> </li>
+    <li>Ivan Pashchenko, <u>Duc-Ly Vu</u>, Fabio Massacci. <b>A Qualitative
+            Study of Dependency Management and Its Security Implications</b>.
+        In Proceedings of the ACM Conference on Computer and Communications
+        Security (CCS), 2020. <a
+            href="https://drive.google.com/file/d/1k4MacsYAJvaP9d0jH6LaDeXGg80w-AHz/view?usp=sharing">Paper</a></li>
+    <li>Ivan Pashchenko, <u>Duc-Ly Vu</u>, Fabio Massacci. <b>[Poster]
+            Preliminary Findings on FOSS Dependencies and Security A Qualitative
+            Study on Developers’ Attitudes and Experience</b>. In Proceedings of
+        the 42nd International Conference on Software Engineering (ICSE), 2020.
+        <a href="https://drive.google.com/file/d/1k4MacsYAJvaP9d0jH6LaDeXGg80w-AHz/view?usp=sharing">Paper</a></li>
+    <li><u>Duc‐Ly Vu</u>, Trong‐Kha Nguyen, Tam V Nguyen, Tu N Nguyen, Fabio
+        Massacci, Phu H Phung. <b>HIT4Mal: Hybrid image transformation for
+            malware classification</b>. Transactions on Emerging Telecommunications
+        Technologies, 2019. <a
+                                href="https://drive.google.com/file/d/1VQ1JmK6qzRRjS-Q-VHP4wJzst7fZBkaY/view?usp=sharing">
+            Paper</a></li>
+    <li> <u>Duc-Ly Vu</u> and Trong‐Kha Nguyen and Tam V Nguyen and Tu N Nguyen
+        and Fabio Massacci and Phu H Phung. <b>A Convolutional Transformation
+            Network for Malware Classification</b> 6th NAFOSTED Conference on
+        Information and Computer Science (NICS), 2019. <a
+        href="https://drive.google.com/file/d/1OiLXE6VzaDZu30YynL_F8djr2auCQnJL/view?usp=sharing">
+        Paper</a></li>
 </ol>
 
 </body>
