--- a/publications.html
+++ b/publications.html
@@ -43,6 +43,11 @@ ol li{
         Information and Computer Science (NICS), 2019. <a
         href="https://drive.google.com/file/d/1OiLXE6VzaDZu30YynL_F8djr2auCQnJL/view?usp=sharing">
         Paper</a></li>
+    <li>Pham, Duy-Phuc and <u>Duc-Ly Vu</u> and Massacci, Fabio. <b>Mac-A-Mal:
+            macOS malware analysis framework resistant to anti evasion
+            techniques</b>. Journal of Computer Virology and Hacking Techniques,
+        2019. <a
+                  href="https://link.springer.com/article/10.1007/s11416-019-00335-w">Paper</li>
 </ol>
 
 </body>
