Adds Twitter timeline

--- a/index.html
+++ b/index.html
@@ -102,58 +102,20 @@ body {
 <ul>
   <li><a class="active" href="#home">Home</a></li>
   <li><a href="publications.html">Publications</a></li>
-  <li><a href="#contact">Contact</a></li>
+  <li><a href="#contacts.html">Contact</a></li>
   <li><a href="#about">About</a></li>
 </ul>
 
 <div class="row">
   <div class="leftcolumn">
     <div class="card">
-      <h2>My Research</h2>
-      <!-- <h5>Title description, Dec 7, 2017</h5> -->
-      <!-- <div class="fakeimg" style="height:200px;">Image</div> -->
-      <p>I do researches on the security of open-source software. In particular, I am intersted in
-      understanding the threats in using the open-source software including malicious software,
-      security vulnerabilties. </p>
+      <h3>Hello, My name is Ly Vu Duc, I am from Binh Phuoc, Vietnam. Currently,
+      I am a third year Ph.D candiate at the University of Trento, Italy</h3>
+      <p>I do research on malware detection for computer systems. In my free
+      time, I like reading books and playing guitar. You can contact me by
+       <a href = "mailto: vuducly151092@gmail.com">Email</a></p>
     </div>
-    <div class="card">
-      <h2>My hobiess</h2>
-      <!-- <h5>Title description, Sep 2, 2017</h5> -->
-      <!-- <div class="fakeimg" style="height:200px;">Image</div> -->
-      <p>I like reading books, playing guitar</p>
-      <!-- <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p> -->
-    </div>
-    <div class="card">
-      <h2>My Education</h2>
-      <!-- <h5>Title description, Sep 2, 2017</h5> -->
-      <!-- <div class="fakeimg" style="height:200px;">Image</div> -->
-      <p>I like reading books, playing guitar</p>
-      <!-- <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p> -->
-    </div>
-  </div>
-  <div class="rightcolumn">
-    <div class="card">
-      <h2>About Me</h2>
-      <!-- <div class="fakeimg" style="height:100px;">Image</div> -->
-       <img src="figures/avatar.jpg" alt="Mountains" width="300" height="300">
-      <p>My name is Ly Vu Duc, and I am from Binh Phuoc, Vietnam. Currently, I am a Ph.D student at the Univerisity of Trento.</p>
-    </div>
-    <div class="card">
-      <h3>Popular Post</h3>
-      <div class="fakeimg">Image</div><br>
-      <div class="fakeimg">Image</div><br>
-      <div class="fakeimg">Image</div>
-    </div>
-    <div class="card">
-      <h3>Follow Me</h3>
-      <p>Some text..</p>
-    </div>
-  </div>
-</div>
 
-<div class="footer">
-  <h2>Footer</h2>
-</div>
-
+    <a class="twitter-timeline" data-width="300" data-height="300" href="https://twitter.com/vuly16?ref_src=twsrc%5Etfw">Tweets by vuly16</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
 </html>
