Adds a guitar performance

--- a/index.html
+++ b/index.html
@@ -117,5 +117,10 @@ body {
     </div>
 
     <a class="twitter-timeline" data-width="300" data-height="300" href="https://twitter.com/vuly16?ref_src=twsrc%5Etfw">Tweets by vuly16</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+    <iframe width="560" height="315"
+        src="https://www.youtube.com/embed/qocF0CM9OPU" frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope;
+    picture-in-picture" allowfullscreen>My Guitar performance</iframe>
 </body>
 </html>
