--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@ body {
 <ul>
   <li><a class="active" href="#home">Home</a></li>
   <li><a href="publications.html">Publications</a></li>
-  <li><a href="#contacts.html">Contact</a></li>
-  <li><a href="#about">About</a></li>
+  <li><a href="contacts.html">Contact</a></li>
 </ul>
 
 <div class="row">
