update camera ready paper of CCS paper

--- a/publications.html
+++ b/publications.html
@@ -25,7 +25,7 @@ ol li{
             Study of Dependency Management and Its Security Implications</b>.
         In Proceedings of the ACM Conference on Computer and Communications
         Security (CCS), 2020. <a
-            href="https://drive.google.com/file/d/1k4MacsYAJvaP9d0jH6LaDeXGg80w-AHz/view?usp=sharing">Paper</a></li>
+            href="https://drive.google.com/file/d/1YY-Ly6y04G4BK3q1SvEERTJxumHzj6CG/view?usp=sharing">Camera-ready Paper</a></li>
     <li>Ivan Pashchenko, <u>Duc-Ly Vu</u>, Fabio Massacci. <b>[Poster]
             Preliminary Findings on FOSS Dependencies and Security A Qualitative
             Study on Developers’ Attitudes and Experience</b>. In Proceedings of
