update conferences title

--- a/publications.html
+++ b/publications.html
@@ -18,13 +18,11 @@ ol li{
             a Qualitative Study</b>. REFSQ 2020 Doctoral Symposium. </li>
     <li><u>Duc-Ly Vu</u>, Ivan Pashchenko, Fabio Massacci, Henrik Plate,
         Antonino Sabetta. <b>Typosquatting and Combosquatting Attacks on the
-            Python Ecosystem</b>. In Proceedings of the IEEE European
-    Symposium on Security and Privacy Workshops (EuroS&PW), 2020. <a
-        href="https://drive.google.com/file/d/1P1-zhNXrnzQrZTUZyDnG4qkHlmBZaYQb/view?usp=sharing">Paper</a> </li>
+            Python Ecosystem</b>. To Appear in Proceedings of the 2nd Workshop on Attackers and Cyber-Crime Operations (WACCO 2020), 2020 . <a
+        href="https://drive.google.com/file/d/1P1-zhNXrnzQrZTUZyDnG4qkHlmBZaYQb/view?usp=sharing">Camera-ready Paper</a> </li>
     <li>Ivan Pashchenko, <u>Duc-Ly Vu</u>, Fabio Massacci. <b>A Qualitative
             Study of Dependency Management and Its Security Implications</b>.
-        In Proceedings of the ACM Conference on Computer and Communications
-        Security (CCS), 2020. <a
+        To Appear in Proceedings of the ACM Conference on Computer and Communications Security (CCS), 2020.<a
             href="https://drive.google.com/file/d/1YY-Ly6y04G4BK3q1SvEERTJxumHzj6CG/view?usp=sharing">Camera-ready Paper</a></li>
     <li>Ivan Pashchenko, <u>Duc-Ly Vu</u>, Fabio Massacci. <b>[Poster]
             Preliminary Findings on FOSS Dependencies and Security A Qualitative
