--- a/publications.html
+++ b/publications.html
@@ -37,7 +37,7 @@ ol li{
             Paper</a></li>
     <li> <u>Duc-Ly Vu</u> and Trong‐Kha Nguyen and Tam V Nguyen and Tu N Nguyen
         and Fabio Massacci and Phu H Phung. <b>A Convolutional Transformation
-            Network for Malware Classification</b> 6th NAFOSTED Conference on
+            Network for Malware Classification</b>. 6th NAFOSTED Conference on
         Information and Computer Science (NICS), 2019. <a
         href="https://drive.google.com/file/d/1OiLXE6VzaDZu30YynL_F8djr2auCQnJL/view?usp=sharing">
         Paper</a></li>
