--- a/publications.html
+++ b/publications.html
@@ -24,21 +24,15 @@ ol li{
             Study of Dependency Management and Its Security Implications</b>.
         To Appear in Proceedings of the ACM Conference on Computer and Communications Security (CCS), 2020.<a
             href="https://drive.google.com/file/d/1YY-Ly6y04G4BK3q1SvEERTJxumHzj6CG/view?usp=sharing">Camera-ready Paper</a></li>
-    <li>Ivan Pashchenko, <u>Duc-Ly Vu</u>, Fabio Massacci. <b>[Poster]
+    <li>Ivan Pashchenko, <u>Duc-Ly Vu</u>, Fabio Massacci. <b>
             Preliminary Findings on FOSS Dependencies and Security A Qualitative
             Study on Developers’ Attitudes and Experience</b>. 2020 IEEE/ACM 41st International Conference on Software Engineering: Companion Proceedings (ICSE-Companion).
         <a href="https://drive.google.com/file/d/1k4MacsYAJvaP9d0jH6LaDeXGg80w-AHz/view?usp=sharing">Paper</a></li>
     <li><u>Duc‐Ly Vu</u>, Trong‐Kha Nguyen, Tam V Nguyen, Tu N Nguyen, Fabio
-        Massacci, Phu H Phung. <b>HIT4Mal: Hybrid image transformation for
-            malware classification</b>. Transactions on Emerging Telecommunications
-        Technologies, 2019. <a
-                                href="https://drive.google.com/file/d/1VQ1JmK6qzRRjS-Q-VHP4wJzst7fZBkaY/view?usp=sharing">
-            Paper</a></li>
+        Massacci, Phu H Phung. <b>HIT4Mal: Hybrid image transformation for malware classification</b>. Transactions on Emerging Telecommunications Technologies, 2019. <a href="https://drive.google.com/file/d/1VQ1JmK6qzRRjS-Q-VHP4wJzst7fZBkaY/view?usp=sharing">Paper</a></li>
     <li> <u>Duc-Ly Vu</u> and Trong‐Kha Nguyen and Tam V Nguyen and Tu N Nguyen
-        and Fabio Massacci and Phu H Phung. <b>A Convolutional Transformation
-            Network for Malware Classification</b>. 6th NAFOSTED Conference on
-        Information and Computer Science (NICS), 2019. <a
-        href="https://drive.google.com/file/d/1OiLXE6VzaDZu30YynL_F8djr2auCQnJL/view?usp=sharing">
+        and Fabio Massacci and Phu H Phung. <b>A Convolutional Transformation Network for Malware Classification</b>. 6th NAFOSTED Conference on
+        Information and Computer Science (NICS), 2019. <a href="https://drive.google.com/file/d/1OiLXE6VzaDZu30YynL_F8djr2auCQnJL/view?usp=sharing">
         Paper</a></li>
     <li>Pham, Duy-Phuc and <u>Duc-Ly Vu</u> and Massacci, Fabio. <b>Mac-A-Mal:
             macOS malware analysis framework resistant to anti evasion
