--- a/publications.html
+++ b/publications.html
@@ -26,8 +26,7 @@ ol li{
             href="https://drive.google.com/file/d/1YY-Ly6y04G4BK3q1SvEERTJxumHzj6CG/view?usp=sharing">Camera-ready Paper</a></li>
     <li>Ivan Pashchenko, <u>Duc-Ly Vu</u>, Fabio Massacci. <b>
             Preliminary Findings on FOSS Dependencies and Security A Qualitative
-            Study on Developers’ Attitudes and Experience</b>. 2020 IEEE/ACM 41st International Conference on Software Engineering: Companion Proceedings (ICSE-Companion).
-        <a href="https://drive.google.com/file/d/1k4MacsYAJvaP9d0jH6LaDeXGg80w-AHz/view?usp=sharing">Paper</a></li>
+            Study on Developers’ Attitudes and Experience</b>. 2020 IEEE/ACM 41st International Conference on Software Engineering: Companion Proceedings (ICSE-Companion). <a href="https://drive.google.com/file/d/1k4MacsYAJvaP9d0jH6LaDeXGg80w-AHz/view?usp=sharing">Paper</a></li>
     <li><u>Duc‐Ly Vu</u>, Trong‐Kha Nguyen, Tam V Nguyen, Tu N Nguyen, Fabio
         Massacci, Phu H Phung. <b>HIT4Mal: Hybrid image transformation for malware classification</b>. Transactions on Emerging Telecommunications Technologies, 2019. <a href="https://drive.google.com/file/d/1VQ1JmK6qzRRjS-Q-VHP4wJzst7fZBkaY/view?usp=sharing">Paper</a></li>
     <li> <u>Duc-Ly Vu</u> and Trong‐Kha Nguyen and Tam V Nguyen and Tu N Nguyen
