Update CCS poster

--- a/publications.html
+++ b/publications.html
@@ -14,6 +14,10 @@ ol li{
 <h2>Publications</h2>
 
 <ol type="1", class="c">
+   <li><u>Duc-Ly Vu</u>, Ivan Pashchenko, Fabio Massacci, Henrik Plate,
+        Antonino Sabetta. <b>Poster: Towards Using Source Code Repositories to Identify Software
+Supply Chain Attacks</b>. To Appear in Proceedings of the 2020 ACM SIGSAC Conference on Computer and Communications Security. <a
+        href="https://drive.google.com/file/d/1huQ5myhpEb3MOKuzjVGjwJzq31mUDTMS/view?usp=sharing">Paper</a> </li>
     <li><u>Duc-Ly Vu</u>. <b>What Developers Want for FOSS Dependency Management? Open Problems from
             a Qualitative Study</b>. REFSQ 2020 Doctoral Symposium. </li>
     <li><u>Duc-Ly Vu</u>, Ivan Pashchenko, Fabio Massacci, Henrik Plate,
