--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@ body {
   <li><a class="active" href="#home">Home</a></li>
   <li><a href="publications.html">Publications</a></li>
   <li><a href="contacts.html">Contact</a></li>
+  <li><a href="books.html">My Favorite books</a></li>
 </ul>
 
 <div class="row">
