--- a/books.html
+++ b/books.html
@@ -29,14 +29,63 @@
 	
 	<h3>Geek Movies</h3> 
 	
-	<!-- Create an Unordered List -->
-	<ul> 
-		<li>Star Wars</li> 
-		<li>Back to the future</li> 
-		<li>Ghostbusters</li> 
-		<li>The princess bride</li> 
-		<li>Shaun of the dead</li> 
-	</ul> 
+### Mindset books
+* **Man's Search for Meaning**. Victor E. Frankl
+* **Tribe of Mentors**. Timothy Ferriss
+* **A Mind of Numbers**. Barbara Oakley
+* **The Design of Everyday Things**. Don Norman
+* **The Master Key System**. Charles F Haanel
+* **Yes To Life**. Victor E. Frankl
+* **Old Path White Clouds (Đường xưa mây trắng)**. Thich Nhat Hanh
+* **Atomic Habits: An Easy & Proven Way to Build Good Habits & Break Bad Ones**. James Clear
+* **THINK STRAIGHT: Change Your Thoughts, Change Your Life** by Darius Foroux
+
+### Programming books
+* **Effective Python**. Brett Slatkin
+* **Python Tricks**. Dan Bader
+* **The Art of Readable Code**. Dustin Boswell and Trevor Foucher
+* **A Smarter Way to Learn Python**. Mark Myers
+* **Code craft**. Pete Goodliffe
+* **Serious Python: Black-Belt Advice on Deployment, Scalability, Testing, and More**. Julien Danjou
+* **Python One-Liners: Write Concise, Eloquent Python Like a Professional**. Christian Mayer
+* **Cracking Codes with Python: An Introduction to Building and Breaking Ciphers**. Al Sweigart
+* **Effective Programming: More Than Writing Code**. Jeff Atwood
+
+### Data Science and Machine learning
+* **Mining Social Media**. Lam Thuy Vo
+* **Data Science for Business**. Foster Provost and Tom Fawcett
+* **Storytelling With Data: A Data Visualization Guide for Business Professionals**. Cole Nussbaumer Knaflic
+* **Deep Learning with Python**. François Chollet
+
+### Security books
+* **Practical Malware Analysis: The Hands-On Guide to Dissecting Malicious Software**. Andrew Honig and Michael Sikorski
+* **Malware Data Science: Attack Detection and Attribution**. Hillary Sanders and Joshua Saxe
+
+### Novel books
+* **1Q84**. Haruki Murakami
+* **Kafa on The Shore**. Haruki Murakami
+* **Norwegian Wood**. Haruki Murakami
+* **What I Talk About When I Talk About Running**. Haruki Murakami
+* **A Wild Sheep Chase**. Haruki Murakami
+* **The Reader**. Bernhard Schlink
+* **The Da Vinci Code**. Dan Brown
+* **Deception Point**. Dan Brown
+* **The Lost Symbol**. Dan Brown
+* **Angels and Demons**. Dan Brown
+
+## Historic Books
+* **The Winning Side (Ben Thang Cuoc)**. Huy Duc
+* **Den Cu**. Tran Dinh
+* **When the Allies Ran Away (Khi đồng minh tháo chạy)**. Nguyễn Tiến Hưng
+
+## Language Books
+* **Speak English: Beginner's Guide to Everyday Conversation.** Yogesh Vermani
+
+## Other books
+* **The Craft of Research**. Wayne C. Booth
+* **The Art of Doing Science and Engineering: Learning to Learn**. Richard Hamming
+* **Write Effective Emails At Works**. Ramakrishna Reddy
+
 	
 </body> 
 	
