--- a/books.html
+++ b/books.html
@@ -1,92 +1,65 @@
-<html> 
-<head> 
-		<title>Changing Bullet Colors</title> 
-		
-		<style> 
-			h3{ 
-				color:green; 
-			} 
-			
-			ul{ 
-				list-style: none; 
-			} 
-			
-			ul li::before { 
-				
-				/*\25E6 is the CSS Code/unicode for a circle */ 
-				content: "\25E6"; 
-				color: green; 
-				display: inline-block; 
-				width: 1em; 
-				margin-left: -0.9em; 
-				font-weight: bold; 
-				font-size:1.1rem; 
-			} 
-		</style> 
-</head> 
-	
-<body> 
-	
-	<h3>Geek Movies</h3> 
-	
-### Mindset books
-* **Man's Search for Meaning**. Victor E. Frankl
-* **Tribe of Mentors**. Timothy Ferriss
-* **A Mind of Numbers**. Barbara Oakley
-* **The Design of Everyday Things**. Don Norman
-* **The Master Key System**. Charles F Haanel
-* **Yes To Life**. Victor E. Frankl
-* **Old Path White Clouds (Đường xưa mây trắng)**. Thich Nhat Hanh
-* **Atomic Habits: An Easy & Proven Way to Build Good Habits & Break Bad Ones**. James Clear
-* **THINK STRAIGHT: Change Your Thoughts, Change Your Life** by Darius Foroux
-
-### Programming books
-* **Effective Python**. Brett Slatkin
-* **Python Tricks**. Dan Bader
-* **The Art of Readable Code**. Dustin Boswell and Trevor Foucher
-* **A Smarter Way to Learn Python**. Mark Myers
-* **Code craft**. Pete Goodliffe
-* **Serious Python: Black-Belt Advice on Deployment, Scalability, Testing, and More**. Julien Danjou
-* **Python One-Liners: Write Concise, Eloquent Python Like a Professional**. Christian Mayer
-* **Cracking Codes with Python: An Introduction to Building and Breaking Ciphers**. Al Sweigart
-* **Effective Programming: More Than Writing Code**. Jeff Atwood
-
-### Data Science and Machine learning
-* **Mining Social Media**. Lam Thuy Vo
-* **Data Science for Business**. Foster Provost and Tom Fawcett
-* **Storytelling With Data: A Data Visualization Guide for Business Professionals**. Cole Nussbaumer Knaflic
-* **Deep Learning with Python**. François Chollet
-
-### Security books
-* **Practical Malware Analysis: The Hands-On Guide to Dissecting Malicious Software**. Andrew Honig and Michael Sikorski
-* **Malware Data Science: Attack Detection and Attribution**. Hillary Sanders and Joshua Saxe
-
-### Novel books
-* **1Q84**. Haruki Murakami
-* **Kafa on The Shore**. Haruki Murakami
-* **Norwegian Wood**. Haruki Murakami
-* **What I Talk About When I Talk About Running**. Haruki Murakami
-* **A Wild Sheep Chase**. Haruki Murakami
-* **The Reader**. Bernhard Schlink
-* **The Da Vinci Code**. Dan Brown
-* **Deception Point**. Dan Brown
-* **The Lost Symbol**. Dan Brown
-* **Angels and Demons**. Dan Brown
-
-## Historic Books
-* **The Winning Side (Ben Thang Cuoc)**. Huy Duc
-* **Den Cu**. Tran Dinh
-* **When the Allies Ran Away (Khi đồng minh tháo chạy)**. Nguyễn Tiến Hưng
-
-## Language Books
-* **Speak English: Beginner's Guide to Everyday Conversation.** Yogesh Vermani
-
-## Other books
-* **The Craft of Research**. Wayne C. Booth
-* **The Art of Doing Science and Engineering: Learning to Learn**. Richard Hamming
-* **Write Effective Emails At Works**. Ramakrishna Reddy
-
-	
-</body> 
-	
-</html> 
+<h3 id="mindset-books">Mindset books</h3>
+<ul>
+<li><strong>Man&#39;s Search for Meaning</strong>. Victor E. Frankl</li>
+<li><strong>Tribe of Mentors</strong>. Timothy Ferriss</li>
+<li><strong>A Mind of Numbers</strong>. Barbara Oakley</li>
+<li><strong>The Design of Everyday Things</strong>. Don Norman</li>
+<li><strong>The Master Key System</strong>. Charles F Haanel</li>
+<li><strong>Yes To Life</strong>. Victor E. Frankl</li>
+<li><strong>Old Path White Clouds (Đường xưa mây trắng)</strong>. Thich Nhat Hanh</li>
+<li><strong>Atomic Habits: An Easy &amp; Proven Way to Build Good Habits &amp; Break Bad Ones</strong>. James Clear</li>
+<li><strong>THINK STRAIGHT: Change Your Thoughts, Change Your Life</strong> by Darius Foroux</li>
+</ul>
+<h3 id="programming-books">Programming books</h3>
+<ul>
+<li><strong>Effective Python</strong>. Brett Slatkin</li>
+<li><strong>Python Tricks</strong>. Dan Bader</li>
+<li><strong>The Art of Readable Code</strong>. Dustin Boswell and Trevor Foucher</li>
+<li><strong>A Smarter Way to Learn Python</strong>. Mark Myers</li>
+<li><strong>Code craft</strong>. Pete Goodliffe</li>
+<li><strong>Serious Python: Black-Belt Advice on Deployment, Scalability, Testing, and More</strong>. Julien Danjou</li>
+<li><strong>Python One-Liners: Write Concise, Eloquent Python Like a Professional</strong>. Christian Mayer</li>
+<li><strong>Cracking Codes with Python: An Introduction to Building and Breaking Ciphers</strong>. Al Sweigart</li>
+<li><strong>Effective Programming: More Than Writing Code</strong>. Jeff Atwood</li>
+</ul>
+<h3 id="data-science-and-machine-learning">Data Science and Machine learning</h3>
+<ul>
+<li><strong>Mining Social Media</strong>. Lam Thuy Vo</li>
+<li><strong>Data Science for Business</strong>. Foster Provost and Tom Fawcett</li>
+<li><strong>Storytelling With Data: A Data Visualization Guide for Business Professionals</strong>. Cole Nussbaumer Knaflic</li>
+<li><strong>Deep Learning with Python</strong>. François Chollet</li>
+</ul>
+<h3 id="security-books">Security books</h3>
+<ul>
+<li><strong>Practical Malware Analysis: The Hands-On Guide to Dissecting Malicious Software</strong>. Andrew Honig and Michael Sikorski</li>
+<li><strong>Malware Data Science: Attack Detection and Attribution</strong>. Hillary Sanders and Joshua Saxe</li>
+</ul>
+<h3 id="novel-books">Novel books</h3>
+<ul>
+<li><strong>1Q84</strong>. Haruki Murakami</li>
+<li><strong>Kafa on The Shore</strong>. Haruki Murakami</li>
+<li><strong>Norwegian Wood</strong>. Haruki Murakami</li>
+<li><strong>What I Talk About When I Talk About Running</strong>. Haruki Murakami</li>
+<li><strong>A Wild Sheep Chase</strong>. Haruki Murakami</li>
+<li><strong>The Reader</strong>. Bernhard Schlink</li>
+<li><strong>The Da Vinci Code</strong>. Dan Brown</li>
+<li><strong>Deception Point</strong>. Dan Brown</li>
+<li><strong>The Lost Symbol</strong>. Dan Brown</li>
+<li><strong>Angels and Demons</strong>. Dan Brown</li>
+</ul>
+<h2 id="historic-books">Historic Books</h2>
+<ul>
+<li><strong>The Winning Side (Ben Thang Cuoc)</strong>. Huy Duc</li>
+<li><strong>Den Cu</strong>. Tran Dinh</li>
+<li><strong>When the Allies Ran Away (Khi đồng minh tháo chạy)</strong>. Nguyễn Tiến Hưng</li>
+</ul>
+<h2 id="language-books">Language Books</h2>
+<ul>
+<li><strong>Speak English: Beginner&#39;s Guide to Everyday Conversation.</strong> Yogesh Vermani</li>
+</ul>
+<h2 id="other-books">Other books</h2>
+<ul>
+<li><strong>The Craft of Research</strong>. Wayne C. Booth</li>
+<li><strong>The Art of Doing Science and Engineering: Learning to Learn</strong>. Richard Hamming</li>
+<li><strong>Write Effective Emails At Works</strong>. Ramakrishna Reddy</li>
+</ul>
