Add link to the projects

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@ body {
 <ul>
   <li><a class="active" href="#home">Home</a></li>
   <li><a href="publications.html">Publications</a></li>
+  <li><a href="projects.html">Projects</a></li>
   <li><a href="contacts.html">Contact</a></li>
   <li><a href="books.html">My Favorite books</a></li>
 </ul>
