--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,6 @@
 
 <ul>
   <li><a href="https://github.com/lyvd/bandit4mal">bandit4mal: A fork of Bandit tool with patterns to identifying malicious python code.</a></li>
-  <li>Tea</li>
+  <li><a href="https://github.com/lyvd/C2Ass">C2Ass: Simluate assembly code for learning purpose.</a></li>
   <li>Milk</li>
 </ul>
