--- a/projects.html
+++ b/projects.html
@@ -2,5 +2,10 @@
 <ul>
   <li><a href="https://github.com/lyvd/bandit4mal">bandit4mal: A fork of Bandit tool with patterns to identifying malicious python code.</a></li>
   <li><a href="https://github.com/lyvd/C2Ass">C2Ass: Simluate assembly code for learning purpose.</a></li>
-  <li>Milk</li>
+  <li><a href="https://github.com/vuduclyunitn/image_based_malware_detection">hit4mal</a>: A modified version of <a href="https://github.com/cortesi/scurve">scurve</a> to capture semantic information of malware using image processing.</li>
+<li><a href="https://github.com/lyvd/virustotalIntellgence">virustotalIntellgence</a>: A scanning tool supports detecting virus/malware by using VirusTotal.</li>
+<li><a href="https://colab.research.google.com/drive/1iWB0jiwFGP3mWXj9lDyugg3OcA6jKpU_">Springer books downloader</a>: Automatically downloading free books from Springer using Python</li>
+<li><a href="https://colab.research.google.com/drive/1OqznFIgudxLjziTiBWLhFHRV4UNl3I-e">Pdf to txt converter</a>: Automatically convert pdf files to txt files</li>
+<li><a href="https://colab.research.google.com/drive/15wwlGYN-1ScYu21rnNUiwSY_lb2KD38s">Compressed file reader</a>: Read files in a compressed archive</li>
+<li><a href="https://github.com/lyvd/OSSquat">OSSquat</a>: A tool to detect typosquatting in open source ecosystems (In development)</li>
 </ul>
