--- a/projects.html
+++ b/projects.html
@@ -8,4 +8,7 @@
 <li><a href="https://colab.research.google.com/drive/1OqznFIgudxLjziTiBWLhFHRV4UNl3I-e">Pdf to txt converter</a>: Automatically convert pdf files to txt files</li>
 <li><a href="https://colab.research.google.com/drive/15wwlGYN-1ScYu21rnNUiwSY_lb2KD38s">Compressed file reader</a>: Read files in a compressed archive</li>
 <li><a href="https://github.com/lyvd/OSSquat">OSSquat</a>: A tool to detect typosquatting in open source ecosystems (In development)</li>
+  <li><a href="https://github.com/vuduclyunitn/wtfptyhon-vi">wtfpython in Vietnamese</a></li>
+<li><a href="https://colab.research.google.com/github/vuduclyunitn/learning_python/blob/master/Anti_patterns.ipynb">The Little Book of Python Anti-Patterns in Vietnamese</a>. </li>
+<li><a href="https://github.com/lyvd/intermediatePython-vi">IntermediatePython in Vietnamese</a> (In translating).</li>
 </ul>
