--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@ body {
       <h3>Hello, My name is Ly Vu Duc, I am from Binh Phuoc, Vietnam. Currently,
       I am a third year Ph.D candiate at the University of Trento, Italy</h3>
       <p>I do research on malware detection for computer systems. In my free
-      time, I like reading books and playing guitar. You can contact me by
-       <a href = "mailto: vuducly151092@gmail.com">Email</a></p>
+      time, I like reading books and playing guitar. I write some medium posts <a href="https://medium.com/@vuducly151092">@vuducly151092</a>.
+        You can contact me by <a href = "mailto: vuducly151092@gmail.com">Email</a></p>
     </div>
 
     <a class="twitter-timeline" data-width="300" data-height="300" href="https://twitter.com/vuly16?ref_src=twsrc%5Etfw">Tweets by vuly16</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
