--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ body {
       <h3>Hello, My name is Ly Vu Duc, I am from Binh Phuoc, Vietnam. Currently,
       I am a third year Ph.D candiate at the University of Trento, Italy</h3>
       <p>I do research on malware detection for computer systems. In my free
-      time, I like reading books and playing guitar. I write some medium posts <a href="https://medium.com/@vuducly151092">@vuducly151092</a>.
+      time, I like reading books (especially self-help books) and playing guitar. I write some medium posts <a href="https://medium.com/@vuducly151092">@vuducly151092</a>. 
         You can contact me by <a href = "mailto: vuducly151092@gmail.com">Email</a></p>
     </div>
 
