--- a/books.html
+++ b/books.html
@@ -59,6 +59,7 @@
 </ul>
 <h2 id="other-books">Other books</h2>
 <ul>
+<li><strong>Working in Public: The Making and Maintenance of Open Source Software</strong>. Eghbal, Nadia.</li>
 <li><strong>The Craft of Research</strong>. Wayne C. Booth</li>
 <li><strong>The Art of Doing Science and Engineering: Learning to Learn</strong>. Richard Hamming</li>
 <li><strong>Write Effective Emails At Works</strong>. Ramakrishna Reddy</li>
