Adds the book Mythical Man-Month, The: Essays on Software Engineering, Anniversary Edition

--- a/books.html
+++ b/books.html
@@ -21,6 +21,8 @@
 <li><strong>Python One-Liners: Write Concise, Eloquent Python Like a Professional</strong>. Christian Mayer</li>
 <li><strong>Cracking Codes with Python: An Introduction to Building and Breaking Ciphers</strong>. Al Sweigart</li>
 <li><strong>Effective Programming: More Than Writing Code</strong>. Jeff Atwood</li>
+<li><strong>Mythical Man-Month, The: Essays on Software Engineering, Anniversary Edition</strong>Brooks Jr., Frederick </li>
+
 </ul>
 <h3 id="data-science-and-machine-learning">Data Science and Machine learning</h3>
 <ul>
