Adds the project Collection of software supply chain papers

--- a/projects.html
+++ b/projects.html
@@ -11,4 +11,6 @@
   <li><a href="https://github.com/vuduclyunitn/wtfptyhon-vi">wtfpython in Vietnamese</a></li>
 <li><a href="https://colab.research.google.com/github/vuduclyunitn/learning_python/blob/master/Anti_patterns.ipynb">The Little Book of Python Anti-Patterns in Vietnamese</a>. </li>
 <li><a href="https://github.com/lyvd/intermediatePython-vi">IntermediatePython in Vietnamese</a> (In translating).</li>
+<li><a href="https://github.com/vuduclyunitn/software_supply_chain_papers">Collection of software supply chain papers</a> (Updating regularly).</li>
+
 </ul>
