Update programming books

--- a/books.html
+++ b/books.html
@@ -22,7 +22,9 @@
 <li><strong>Cracking Codes with Python: An Introduction to Building and Breaking Ciphers</strong>. Al Sweigart</li>
 <li><strong>Effective Programming: More Than Writing Code</strong>. Jeff Atwood</li>
 <li><strong>Mythical Man-Month, The: Essays on Software Engineering, Anniversary Edition</strong>Brooks Jr., Frederick </li>
-
+<li><strong>BEYOND THE BASIC STUFF WITH PYTHON*</strong>Al Sweigart</li>
+<li><strong>The Pragmatic Programmer</strong>Andy Hunt and Dave Thomas</li>
+  
 </ul>
 <h3 id="data-science-and-machine-learning">Data Science and Machine learning</h3>
 <ul>
