Adds quotes to index

--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@ body {
     <li><a href="projects.html">Projects</a></li>
     <li><a href="books.html">My Favorite books</a></li>
   <li><a href="publications.html">Publications</a></li>
+   <li><a href="quotes.html">Quotes</a></li>
   <li><a href="contacts.html">Contact</a></li>
+ 
 </ul>
 
 <div class="row">
