--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@ body {
   <div class="leftcolumn">
     <div class="card">
       <h3>Hello, My name is Ly Vu Duc, I am from Binh Phuoc, Vietnam. Currently,
-      I am a third year Ph.D candiate at the University of Trento, Italy</h3>
+      I am a third year Ph.D candiate at the University of Trento, Italy</h3>. I was an Early stage researcher (ESR) of the [NECS project](https://www.necs-project.eu/). Currently, 
+      I am working for the [AssureMoss project](https://assuremoss.eu/).
       <p>I study malware detection for computer systems. I love writing and sharing techniques about Python. I like learning new stuff, especically those in programming, security and history. With a basic understanding
         of Python programming languagle, I like to help the others to automate the boring stuff.
         In my free time, I like reading books (especially self-help books) and playing guitar. I write some medium posts <a href="https://medium.com/@vuducly151092">@vuducly151092</a>. 
