--- a/index.html
+++ b/index.html
@@ -113,12 +113,14 @@ body {
   <div class="leftcolumn">
     <div class="card">
       <h3>Hello, My name is Ly Vu Duc, I am from Binh Phuoc, Vietnam. Currently,
-      I am a third year Ph.D candiate at the University of Trento, Italy</h3>. I was an Early stage researcher (ESR) of the <a href="https://www.necs-project.eu/">NECS project</a>
-. Currently, 
-      I am working for the <a href="https://assuremoss.eu//">AssureMoss project</a>.
-      <p>I study malware detection for computer systems. I love writing and sharing techniques about Python. I like learning new stuff, especically those in programming, security and history. With a basic understanding
+      I am a third year Ph.D candiate at the University of Trento, Italy</h3>
+      I was an Early stage researcher (ESR) of the <a href="https://www.necs-project.eu/">NECS project</a>
+     . Currently, I am working for the <a href="https://assuremoss.eu//">AssureMoss project</a>.
+      <p>I study and develop malware detection tools for computer systems. In particular, I proposed an approach called <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/ett.3789/">HIT4MAL</a> to classify malware using image transformations. Recently, I have developed an approach to detect
+        code injections in software supply chain attacks, please check it out if you are interested <a href="https://dl.acm.org/doi/abs/10.1145/3372297.3420015">link</a> . 
+        I love writing and sharing techniques about Python. I like learning new stuff, especically those in programming, security and history. With a basic understanding
         of Python programming languagle, I like to help the others to automate the boring stuff.
-        In my free time, I like reading books (especially self-help books) and playing guitar. I write some medium posts <a href="https://medium.com/@vuducly151092">@vuducly151092</a>. 
+        In my free time, I like reading books (especially self-help books) and playing guitar (I am learning keyboard now). I write some medium posts <a href="https://medium.com/@vuducly151092">@vuducly151092</a>. 
         You can contact me by <a href = "mailto: vuducly151092@gmail.com">Email</a></p>
     </div>
 
