Updates contribution to detecting typosquatting

--- a/index.html
+++ b/index.html
@@ -117,8 +117,11 @@ body {
       I was an Early stage researcher (ESR) of the <a href="https://www.necs-project.eu/">NECS project</a>
      . Currently, I am working for the <a href="https://assuremoss.eu//">AssureMoss project</a>.
       <p>I study and develop malware detection tools for computer systems. In particular, I proposed an approach called <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/ett.3789/">HIT4MAL</a> to classify malware using image transformations. Recently, I have developed an approach to detect
-        code injections in software supply chain attacks, please check it out if you are interested <a href="https://dl.acm.org/doi/abs/10.1145/3372297.3420015">link</a> . 
-        I love writing and sharing techniques about Python. I like learning new stuff, especically those in programming, security and history. With a basic understanding
+        code injections in software supply chain attacks, please check it out if you are interested <a href="https://dl.acm.org/doi/abs/10.1145/3372297.3420015">link</a>. Or a simple approach leveraging 
+        Levenshtein distance to flag potential typosquatinng packages <a href="https://ieeexplore.ieee.org/abstract/document/9229803">Link</a>
+        </p>
+      
+      <p>I love writing and sharing techniques about Python. I like learning new stuff, especically those in programming, security and history. With a basic understanding
         of Python programming languagle, I like to help the others to automate the boring stuff.
         In my free time, I like reading books (especially self-help books) and playing guitar (I am learning keyboard now). I write some medium posts <a href="https://medium.com/@vuducly151092">@vuducly151092</a>. 
         You can contact me by <a href = "mailto: vuducly151092@gmail.com">Email</a></p>
