updates master contributions

--- a/index.html
+++ b/index.html
@@ -121,6 +121,10 @@ body {
         Levenshtein distance to flag potential typosquatinng packages <a href="https://ieeexplore.ieee.org/abstract/document/9229803">Link</a>
         </p>
       
+      <p>I was studying and researching computer security at the Hongik university, South Korea. During that time, I have developed <a href="https://www.researchgate.net/profile/Duc_Ly_Vu/publication/344491557_DeepMal_Deep_Convolutional_and_Recurrent_Neural_Networks_for_Malware_Classification/links/5f7c3baf92851c14bcb17426/DeepMal-Deep-Convolutional-and-Recurrent-Neural-Networks-for-Malware-Classification.pdf">DeepMal</a>
+      an deep learning approach based on assembly files at the character level, and another approach that cobines static and dynamic features to classify malware <a href="https://www.researchgate.net/profile/Duc_Ly_Vu/publication/344491456_Efficient_Malware_Classification_Techniques_Using_Integrated_Static_and_Dynamic_Indicators/links/5f7c3a8f92851c14bcb173bb/Efficient-Malware-Classification-Techniques-Using-Integrated-Static-and-Dynamic-Indicators.pdf">Link</a></p>
+      <p>I like teaching, and I have taught a few couses on Python programming and machine learning to both university students and engineers. </p>
+      
       <p>I love writing and sharing techniques about Python. I like learning new stuff, especically those in programming, security and history. With a basic understanding
         of Python programming languagle, I like to help the others to automate the boring stuff.
         In my free time, I like reading books (especially self-help books) and playing guitar (I am learning keyboard now). I write some medium posts <a href="https://medium.com/@vuducly151092">@vuducly151092</a>. 
