Adds experience at SAP

--- a/index.html
+++ b/index.html
@@ -115,9 +115,10 @@ body {
       <h3>Hello, My name is Ly Vu Duc, I am from Binh Phuoc, Vietnam. Currently,
       I am a third year Ph.D candiate at the University of Trento, Italy</h3>
       I was an Early stage researcher (ESR) of the <a href="https://www.necs-project.eu/">NECS project</a>
-     . Currently, I am working for the <a href="https://assuremoss.eu//">AssureMoss project</a>.
-      <p>I study and develop malware detection tools for computer systems. In particular, I proposed an approach called <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/ett.3789/">HIT4MAL</a> to classify malware using image transformations. Recently, I have developed an approach to detect
-        code injections in software supply chain attacks, please check it out if you are interested <a href="https://dl.acm.org/doi/abs/10.1145/3372297.3420015">link</a>. Or a simple approach leveraging 
+     . Currently, I am working for the <a href="https://assuremoss.eu//">AssureMoss project</a>. I had a chance to work at SAP Security
+      Research, France on the topic of software supply chain attacks. During the internship, we developed an approach to detect
+        code injections in software supply chain attacks, please check it out if you are interested <a href="https://dl.acm.org/doi/abs/10.1145/3372297.3420015">link</a>
+      <p>I study and develop malware detection tools for computer systems. We developed an approach called <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/ett.3789/">HIT4MAL</a> to classify malware using image transformations. Or a simple approach leveraging 
         Levenshtein distance to flag potential typosquatinng packages <a href="https://ieeexplore.ieee.org/abstract/document/9229803">Link</a>
         </p>
       
