--- a/publications.html
+++ b/publications.html
@@ -16,7 +16,7 @@ ol li{
 <ol type="1", class="c">
  <li><u>Duc-Ly Vu</u>, Ivan Pashchenko, Fabio Massacci <b>Please hold on: more time = more patches?
 Automated program repair as anytime algorithms</b>. To Appear in 2nd International Workshop on Automated Program Repair (APR 2021). <a
-        href="">Paper</a> </li>
+        href="papers/apr2021.pdf">Camera-ready</a> </li>
    <li><u>Duc-Ly Vu</u>, Ivan Pashchenko, Fabio Massacci, Henrik Plate,
         Antonino Sabetta. <b>Poster: Towards Using Source Code Repositories to Identify Software
 Supply Chain Attacks</b>. To Appear in Proceedings of the 2020 ACM SIGSAC Conference on Computer and Communications Security. <a
